2004-05-26  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/placement.c (__place_get_wm_pos):
	fixed placement in top left corner when pressing escape during manual
	placement

2004-05-18  Olivier Chapuis  <olivier.chapuis@free.fr>

	* fvwm/ewmh.c (EWMH_SetFrameStrut):
	Fixed a miss-print

2004-05-09  Mikhael Goikhman  <migo@homemail.com>

	* fvwm/conditional.c:
	* fvwm/fvwm.1.in:
	clean up Test code and documentation, add new False condition,
	unrecognized conditions produce Error return code now

2004-05-06  Dan Espen  <dane@mk.telcordia.com>

	* fvwm/style.c: Remove extra char.

2004-05-01  Olivier Chapuis  <olivier.chapuis@free.fr>

	* fvwm/ewmh.c (ewmh_atom_client_win):
	* fvwm/ewmh_intern.h:
	* fvwm/ewmh_events.c (EWMH_ProcessClientMessage):
	(ewmh_MoveResizeWindow):
	Added _NET_RESTACK_WINDOW as it is similar than _NET_MOVERESIZE_WINDOW

	* fvwm/events.c (__handle_cr_on_client):
	(__handle_configure_request):
	(events_handle_configure_request):
	Some renaming for consistency, force restacking if the event come from
	an ewmh restack

	* fvwm/ewmh_events.c (ewmh_MoveResize):
	Fixed _NET_WM_MOVERESIZE

	* fvwm/ewmh_events.c (ewmh_MoveResizeWindow):
	Removed debug code

	* fvwm/ewmh.c (ewmh_atom_fvwm_win):
	(EWMH_SetFrameStrut):
	Added _NET_FRAME_EXTENTS as it is just _KDE_NET_WM_FRAME_STRUT

2004-04-29  Olivier Chapuis  <olivier.chapuis@free.fr>

	* libs/FImage.c (FShmSafeCreateImage):
	Finished to fix SHM remote client problem

2004-04-29  Olivier Chapuis  <olivier.chapuis@free.fr>

	* libs/FImage.c (FShmSafeCreateImage):
	Fixed when we are a remote client

2004-04-21  Mikhael Goikhman  <migo@homemail.com>

	* INSTALL.fvwm:
	* NEWS:
	* acconfig.h:
	* fvwm/fvwm.1.in:
	* fvwm/fvwm.c:
	* fvwm/gnome.h:
	* fvwm/session.c:
	* libs/envvar.c:
	* libs/envvar.h:
	new default ~/.fvwm/config file is now recommended instead of
	still supported ~/.fvwm/.fvwm2rc

2004-04-21  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/menus.c (NewMenuRoot):